--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
+        "soved/laravel-gdpr": "^1.5",
         "spatie/laravel-cookie-consent": "^2.12"
     },
     "require-dev": {
